objects/Quote.object
<CustomObject>
    <fields>
        <fullName>PM_Notes__c</fullName>
        <description>For PM to make internal comments. LALO 102115</description>
        <inlineHelpText>Does not show on Customer&apos;s Quote</inlineHelpText>
        <label>PM Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <formula>Opportunity.PO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this is populated from the Opportunity</inlineHelpText>
        <label>PO #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Link_for_Conga__c</fullName>
        <formula>IF( ISBLANK( Quote_Clone_Id__c ) 
   ,&apos;&apos;
   ,  LEFT($Api.Enterprise_Server_URL_100,FIND(&quot;.com&quot;,$Api.Enterprise_Server_URL_100)+4)+&quot;secur/login_portal.jsp?orgId=&quot; &amp; $Organization.Id &amp; &quot;&amp;portalid=060W00000004cJT&amp;retURL=/apex/QuoteCreditCardEntryPage?id=&quot; &amp; Quote_Clone_Id__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Link for Conga</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepared_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prepared By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prepared_by_Email__c</fullName>
        <formula>Prepared_By__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prepared by Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepared_by_Phone__c</fullName>
        <formula>Prepared_By__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prepared by Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepared_for_Phone__c</fullName>
        <formula>Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prepared for Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepared_for_email__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prepared for email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_with_Handling_Fees__c</fullName>
        <description>total price of products with Ship Via equals 5 or 6</description>
        <inlineHelpText>total price of products with Ship Via equals 5 or 6</inlineHelpText>
        <label>Products with Delivery Fees</label>
        <summarizedField>QuoteLineItem.Line_Item_total_Contract_Price__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Requires_Handling_Fees__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Products_with_Shipping_Fees__c</fullName>
        <inlineHelpText>Products with Ship Via 1,2,3 or 4</inlineHelpText>
        <label>Products with Shipping Fees</label>
        <summarizedField>QuoteLineItem.Products_w_Shipping_Fees__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Opportunity.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_CW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote&gt;CW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Clone_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Clone Id</label>
        <referenceTo>Quote_Clone__c</referenceTo>
        <relationshipLabel>RH Quotes</relationshipLabel>
        <relationshipName>RH_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Id_18_Char__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Id (18-Char)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quoted_On__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>date the quote was provided to the client</inlineHelpText>
        <label>Quoted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Range_for_Handling_Fees__c</fullName>
        <inlineHelpText>Geographical range for furniture delivery</inlineHelpText>
        <label>*Delivery Rate Table</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Extended</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>HI/AK</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_DeveloperName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type DeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Freight__c</fullName>
        <formula>Furniture_Delivery_Rate__c + UPS_Delivery_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retail Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rsl_Ex__c</fullName>
        <inlineHelpText>Leave blank for CW Order conversion then manually enter into CW Order.</inlineHelpText>
        <label>*Rsl/Ex#</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rush_Delivery__c</fullName>
        <formula>IF( Final_Ship_To_Country_Formula__c = &quot;Canada&quot; || Freight_Override__c=True ||  Freight_Fees__c &gt;0  ||  Use_7_Contract_Model__c =&quot;Yes&quot;, 0, CASE( Expedited_Shipping__c , 
&quot;2 - 2nd Day&quot;,15.00, 
&quot;3 - Next Day&quot;,25.00, 
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in Calculation where 2-Day = $15 and Overnight = $25</inlineHelpText>
        <label>Rush Delivery?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFDC_Test__c</fullName>
        <formula>IF(
AND( TotalPrice &gt;= 5000,
Quoted_On__c &lt;= DATE(2014,05,28),
ROUND(Total_Discount__c, 3) &gt;= 0.25, 
ISPICKVAL(Manual_Entry_of_S_H_fees__c, &quot;No&quot;),
OR(ISPICKVAL(Country__c,&quot;US&quot;), ISPICKVAL(Country__c,&quot;Offshore&quot;))),
&quot;Yes&quot;, IF(
AND( TotalPrice &gt;= 10000, 
Quoted_On__c &gt; DATE(2014,05,28), 
ROUND(Total_Discount__c, 3) &gt;= 0.25, 
ISPICKVAL(Manual_Entry_of_S_H_fees__c, &quot;No&quot;),
OR(ISPICKVAL(Country__c,&quot;US&quot;), ISPICKVAL(Country__c,&quot;Offshore&quot;))),
&quot;Yes&quot;,&quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_City__c</fullName>
        <label>*Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_State__c</fullName>
        <inlineHelpText>This field drives tax on freight where applicable and maps to CW Order.</inlineHelpText>
        <label>*Shipping State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Final_Ship_To_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_Street_1__c</fullName>
        <label>*Shipping Street 1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Street_2__c</fullName>
        <label>*Shipping Street 2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_First_Name__c</fullName>
        <label>Ship To First Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Last_Name__c</fullName>
        <label>Ship To Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <label>Ship To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ship_To_co__c</fullName>
        <inlineHelpText>When filled in, this field will merge to Conga Quote Templates</inlineHelpText>
        <label>Ship To c/o</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_same_as_Sold_To__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked this will copy the Sold To Address into Shipping Address. (Sold To address is from the Account Billing address). Collect your reward by sending a screenshot to tgibson@rh.com</inlineHelpText>
        <label>Sold To same as Ship To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_Zip__c</fullName>
        <label>*Shipping Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>contact person for deliveries</inlineHelpText>
        <label>Ship to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_State__c</fullName>
        <label>Ship to State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <label>*Ship To First and Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country_2__c</fullName>
        <inlineHelpText>This field maps to CW Order and drives freight calculations on this Quote.</inlineHelpText>
        <label>*Shipping Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>*Shipping Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Fees__c</fullName>
        <inlineHelpText>Calculated by SFDC. If &quot;Use 7%...&quot;=yes, this = 7% * discounted line item total of all Opp Products where the Ship Via is not = 5,6,10. If no, this = flat fee determined by &quot;New Shipping Fees Update&quot;. Value will be 0 if Project Freight Quote is entered.</inlineHelpText>
        <label>Shipping Fees</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Handling_Duty_Brokerage__c</fullName>
        <formula>TotalPrice  * 0.2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Handling Duty Brokerage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Phone__c</fullName>
        <label>*Ship to Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Shipping_Rate_Code__c</fullName>
        <formula>IF( Freight_Fees__c &gt; 0, 0, 

IF( Use_7_Fee_Structure__c =&quot;Yes&quot;,22, 
IF(AND(Quoted_On__c &gt; DATE(2012,09,20) , TEXT(Country__c)=&quot;CAN&quot;),50, 
IF(AND(Products_with_Shipping_Fees__c&gt;500.00,Shipping_Country__c =&quot;CAN&quot;),1, 
IF(AND(Products_with_Shipping_Fees__c&gt;400.00,Shipping_Country__c =&quot;CAN&quot;),2, 
IF(AND(Products_with_Shipping_Fees__c&gt;500.00,Shipping_Country__c =&quot;US&quot;),3, 
IF(AND(Products_with_Shipping_Fees__c&gt;300.00,Shipping_Country__c =&quot;CAN&quot;),4, 
IF(AND(Products_with_Shipping_Fees__c&gt;400.00,Shipping_Country__c =&quot;US&quot;),5, 
IF(AND(Products_with_Shipping_Fees__c&gt;200.00,Shipping_Country__c =&quot;CAN&quot;),5, 
IF(AND(Products_with_Shipping_Fees__c&gt;125.00,Shipping_Country__c =&quot;CAN&quot;),6, 
IF(AND(Products_with_Shipping_Fees__c&gt;300.00,Shipping_Country__c =&quot;US&quot;),7, 
IF(AND(Products_with_Shipping_Fees__c&gt;90.00,Shipping_Country__c =&quot;CAN&quot;),8, 
IF(AND(Products_with_Shipping_Fees__c&gt;200.00,Shipping_Country__c =&quot;US&quot;),9, 
IF(AND(Products_with_Shipping_Fees__c&gt;65.00,Shipping_Country__c =&quot;CAN&quot;),10, 
IF(AND(Products_with_Shipping_Fees__c&gt;125.00,Shipping_Country__c =&quot;US&quot;),11, 
IF(AND(Products_with_Shipping_Fees__c&gt;45.00,Shipping_Country__c =&quot;CAN&quot;),12, 
IF(AND(Products_with_Shipping_Fees__c&gt;90.00,Shipping_Country__c =&quot;US&quot;),13, 
IF(AND(Products_with_Shipping_Fees__c&gt;65.00,Shipping_Country__c =&quot;US&quot;),14, 
IF(AND(Products_with_Shipping_Fees__c&gt;25.00,Shipping_Country__c =&quot;CAN&quot;),15, 
IF(AND(Products_with_Shipping_Fees__c&gt;45.00,Shipping_Country__c =&quot;US&quot;),16, 
IF(AND(Products_with_Shipping_Fees__c&gt;15.00,Shipping_Country__c =&quot;CAN&quot;),17, 
IF(AND(Products_with_Shipping_Fees__c&gt;25.00,Shipping_Country__c =&quot;US&quot;),18, 
IF(AND(Products_with_Shipping_Fees__c&gt;0.00,Shipping_Country__c =&quot;CAN&quot;),19, 
IF(AND(Products_with_Shipping_Fees__c&gt;15.00,Shipping_Country__c =&quot;US&quot;),20, 
IF(AND(Products_with_Shipping_Fees__c&gt;0.00,Shipping_Country__c =&quot;US&quot;),21, 
0.00)))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated by SFDC: RH Shipping Code (1-22 or 50), as determined by value of Products w/ Shipping Fees on the Quote.</inlineHelpText>
        <label>Shipping Rate Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Rate_Table__c</fullName>
        <label>Shipping Rate Table</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sold_To_First_Name__c</fullName>
        <label>Sold To First Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Last_Name__c</fullName>
        <label>Sold To Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_co__c</fullName>
        <inlineHelpText>When filled in, this field will merge to Conga Quote Templates</inlineHelpText>
        <label>Sold To c/o</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Some_Items_have_Handling_Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Some Items have Handling Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sum_of_Product_Surcharges__c</fullName>
        <inlineHelpText>Calculated by SFDC. Sums the Surcharge Amount * Quantity associated with all relevant Products linked with this Quote.</inlineHelpText>
        <label>Sum of Product Surcharges</label>
        <summarizedField>QuoteLineItem.Surcharge_Amount__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Surcharge_Total__c</fullName>
        <inlineHelpText>Automatically sums the total handling surcharges associated with all relevant Products linked with this Quote.</inlineHelpText>
        <label>Surcharge Total</label>
        <summarizedField>QuoteLineItem.Surcharge_Amount__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax_Application_Language__c</fullName>
        <label>Tax Application Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E - Exempt</fullName>
                </value>
                <value>
                    <fullName>G - GST Only</fullName>
                </value>
                <value>
                    <fullName>N - Non Taxable</fullName>
                </value>
                <value>
                    <fullName>P - PST Only</fullName>
                </value>
                <value>
                    <fullName>R - Resale</fullName>
                    <default>true</default>
                    <label>R - Resale</label>
                </value>
                <value>
                    <fullName>T - Standard Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Populated from Opportunity</inlineHelpText>
        <label>Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <inlineHelpText>Leave blank for Tax Exempt quotes.</inlineHelpText>
        <label>Tax Rate</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Total_2__c</fullName>
        <formula>Tax_on_Freight__c + Tax_on_Merchandise_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Tax on Merchandise + Tax on Freight</inlineHelpText>
        <label>Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_on_Freight__c</fullName>
        <inlineHelpText>CW Freight Total * Tax Rate (for States that charge Tax on Freight)</inlineHelpText>
        <label>Tax on Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_on_Handling__c</fullName>
        <formula>IF( 
OR(ISPICKVAL( Ship_to_State__c , &quot;CO&quot;), 
ISPICKVAL( Ship_to_State__c , &quot;MA&quot;),
ISPICKVAL( Ship_to_State__c , &quot;SC&quot;), 
ISPICKVAL( Ship_to_State__c , &quot;OK&quot;), 
ISPICKVAL( Ship_to_State__c , &quot;OR&quot;), 
ISPICKVAL( Ship_to_State__c , &quot;UT&quot;)), 
0.00, 
Tax_Rate__c* Calculated_Handling_VF__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax on Handling &amp; Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_on_Merchandise_2__c</fullName>
        <inlineHelpText>Merchandise Total * Tax Rate</inlineHelpText>
        <label>Tax on Merchandise</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_on_Merchandise__c</fullName>
        <description>JAlbino 6/12/15: reviewed w/ TGibson - needs updating for Oregon etc.</description>
        <formula>IF(NOT(ISPICKVAL( Ship_to_State__c , &quot;OR&quot;)), (Tax_Rate__c * TotalPrice), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax on Merchandise</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_on_Project_Freight_Quote__c</fullName>
        <formula>If( Freight_Fees__c &gt; 0,
Freight_Fees__c * Tax_Rate__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Project Freight Quote is entered, the tax on that quote is calculated here.</inlineHelpText>
        <label>Tax on Project Freight Quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_on_Shipping__c</fullName>
        <description>Jalbino 6/12/15: reviewed w/ TGibson - thought here is that we can work to remove date clause and just allow ALL Quote records in the system to reference the LATEST Shipping Tax logic.</description>
        <formula>IF
(
    OR
    (
           ISPICKVAL( Ship_to_State__c , &quot;AL&quot;),
           ISPICKVAL( Ship_to_State__c , &quot;AZ&quot;),
           ISPICKVAL( Ship_to_State__c , &quot;CA&quot;),
           ISPICKVAL( Ship_to_State__c , &quot;CO&quot;),
           ISPICKVAL( Ship_to_State__c , &quot;MD&quot;),
           ISPICKVAL( Ship_to_State__c , &quot;MA&quot;),
           ISPICKVAL( Ship_to_State__c , &quot;OK&quot;),
           ISPICKVAL( Ship_to_State__c , &quot;OR&quot;),
           ISPICKVAL( Ship_to_State__c , &quot;UT&quot;),
           ISPICKVAL( Ship_to_State__c , &quot;VA&quot;)
    ), 
    0.00,
    IF( Quoted_On__c &lt; DATE(2014,06,25),
    (Tax_Rate__c *  (Shipping_Fees__c+ Freight_Fees__c )),
    Tax_Rate__c *  Calculated_Shipping__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax on Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <formula>( Total_List_Price__c - TotalPrice )/ Total_List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_ELC__c</fullName>
        <label>Total ELC</label>
        <summarizedField>QuoteLineItem.ELC_Update__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <inlineHelpText>Calculated by SFDC. For all Products added to the source Opp, this is the sum of the Direct Original Price of those Products times the Product Quantity. This figure is a base, before any discounting and fees.</inlineHelpText>
        <label>Total List Price</label>
        <summarizedField>QuoteLineItem.Line_Item_Total_List_Price__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Tax__c</fullName>
        <formula>IF( Freight_Fees__c &gt; 0,
Tax_on_Merchandise__c + Tax_on_Project_Freight_Quote__c,
Tax_on_Merchandise__c + Tax_on_Shipping__c + Tax_on_Handling__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated by SFDC. If there is no Project Freight Quote, this is the sum of Tax on Merchandise + Tax on Shipping + Tax on Handling.  If this is a Project Freight Quote, this is the sum of Tax on Merchandise + Tax on Project Freight Request</inlineHelpText>
        <label>Overall Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>TotalPrice+ Total_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_ID__c</fullName>
        <formula>Opportunity.Account.X12_Digit_Member__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPS_Delivery_Rate__c</fullName>
        <label>UPS Delivery Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Use_7_Contract_Model__c</fullName>
        <formula>IF( TotalPrice &gt;=10000  &amp;&amp;  Total_Discount__c &gt;= 0.25, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&apos;Yes&apos; if Opportunity &gt; $10K and Discount &gt; 25%</inlineHelpText>
        <label>Use 7% Contract Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_7_Fee_Structure__c</fullName>
        <formula>IF( 
TotalPrice &gt;= 10000 &amp;&amp; 
ROUND(Total_Discount__c, 3) &gt;= 0.25 &amp;&amp; 
(ISPICKVAL(Country__c,&quot;US&quot;) || ISPICKVAL(Country__c,&quot;Offshore&quot;)), 
&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated by SFDC. If the Total Price of the Quote is &lt; 10K, this = &quot;no&quot; and fees should follow the CORE shipping model of UPS Standard Rates. If the Total Price is &gt; 10K, this = &quot;yes&quot; and applicable fees are set to 7% of the Total Price.</inlineHelpText>
        <label>Use 7% Fee Structure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_7_percent_rate__c</fullName>
        <formula>IF(
AND( TotalPrice &gt;= 5000, 
ROUND(Total_Discount__c, 3) &gt;= 0.25, 
ISPICKVAL(Manual_Entry_of_S_H_fees__c, &quot;No&quot;),
OR(ISPICKVAL(Country__c,&quot;US&quot;), ISPICKVAL(Country__c,&quot;Offshore&quot;))),
&quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>use 7% shipping rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_7_rate2__c</fullName>
        <description>updated via workflow rule</description>
        <label>Use 7% rate</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Phone__c</fullName>
        <label>*2nd Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X7_Calc__c</fullName>
        <formula>IF(
ROUND(Total_Discount__c, 3) &gt;= 0.25 &amp;&amp;
ISPICKVAL(Manual_Entry_of_S_H_fees__c, &quot;No&quot;) &amp;&amp;
(ISPICKVAL(Country__c,&quot;US&quot;) || ISPICKVAL(Country__c,&quot;Offshore&quot;)),
1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>7% Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>Admin</fullName>
        <active>true</active>
        <description>to view hidden fields</description>
        <label>Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Canada</fullName>
        <active>false</active>
        <description>to be used when the quote is for a Canadian shipment</description>
        <label>Canada</label>
    </recordTypes>
    <recordTypes>
        <fullName>Design_Atelier</fullName>
        <active>true</active>
        <label>Gallery - Temporary Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Offshore</fullName>
        <active>false</active>
        <description>Offshore Quote Record (for records created prior to 9/1/14)</description>
        <label>Offshore (Old Model)</label>
    </recordTypes>
</CustomObject>